[tool.poetry]
name = "pdf-image-extractor"
version = "0.1.0"
description = ""
authors = ["rosetteer-kim <rosetteer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.36.0"
pymupdf = "^1.24.7"
pillow = "^10.4.0"
numpy = "^2.0.1"
opencv-python = "^4.10.0.84"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
